<resources>
    <string name="app_name">Popular Movies</string>
    <string name="Title">Title</string>
    <string name="release_date">Release Date</string>
    <string name ="synopsis">Synopsis</string>
    <string name = "empty">Empty</string>
    <string name = "most_popular_menu">Most popular</string>
    <string name="top_rated_menu">Top rated</string>
    <string name="favourites_menu">Favourites</string>
    <string name="trailer">Trailer 1</string>
    <string name="review_content">Review Content</string>
    <string name="author">Author</string>
    <string name="user_revs">User Reviews</string>
    <string name="listed_trailers">Listed Trailers</string>
</resources>
