<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favourite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="7dp"
        app:srcCompat="@android:drawable/btn_star" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333438">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333438"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbars="vertical"
            tools:context="com.example.android.popularmovies_1.DetailActivity">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.30"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="5dp"
                app:contentPadding="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/detail_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="0.30"
                        android:contentDescription="Poster here..."
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="5dp"
                        android:layout_weight="0.30"
                        android:autoSizeMaxTextSize="46dp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif"
                        android:text="@string/Title"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.30"
                        app:srcCompat="@color/cardview_light_background" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="0.30"
                        android:clickable="false" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/trailer_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.30"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="5dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/video_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/trailer"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/trailer_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/cardview_dark_background"
                        app:srcCompat="@android:drawable/ic_media_play" />

                    <ImageButton
                        android:id="@+id/share_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/cardview_dark_background"
                        app:srcCompat="@android:drawable/ic_menu_share" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.30"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="5dp"
                app:contentPadding="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="5dp"
                        android:autoText="false"
                        android:fontFamily="sans-serif"
                        android:text="@string/release_date"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.30"
                        app:srcCompat="@color/cardview_light_background" />

                    <TextView
                        android:id="@+id/detail_synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="0.30"
                        android:backgroundTint="@android:color/white"
                        android:text="@string/synopsis"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/review_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.30"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="5dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/review_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ellipsize="end"
                        android:maxLines="8"
                        android:text="@string/review_content"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.30"
                        app:srcCompat="@color/cardview_light_background" />

                    <TextView
                        android:id="@+id/review_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/author"
                        android:textAlignment="textStart"
                        android:textColor="#FFF"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>